# ChangeLog for dev-ruby/plruby
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/plruby/ChangeLog,v 1.7 2007/02/22 01:06:38 peper Exp $

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

*plruby-0.4.9 (09 Nov 2006)

  09 Nov 2006; Tiziano Müller <dev-zero@gentoo.org> -plruby-0.4.3.ebuild,
  -plruby-0.4.7.ebuild, +plruby-0.4.9.ebuild:
  Version bump, bug #154098. Removed old versions.

*plruby-0.4.7 (24 Jun 2006)

  24 Jun 2006; Aaron Kulbe <superlag@gentoo.org> +plruby-0.4.7.ebuild:
  Bumping to 0.4.7 wrt Bug #134678, adding ~amd64

*plruby-0.4.3 (12 Jan 2005)

  12 Jan 2005; Masatomo Nakano <nakano@gentoo.org> +plruby-0.4.3.ebuild:
  Version bump.

  12 Jan 2005; Masatomo Nakano <nakano@gentoo.org> plruby-0.4.2.ebuild:
  Marked stable on x86.

*plruby-0.4.2 (05 Jul 2004)

  05 Jul 2004; David Holm <dholm@gentoo.org> plruby-0.4.2.ebuild:
  Added to ~ppc.

  04 Jul 2004; Masatomo Nakano <nakano@gentoo.org> :
  Initial import. Ebuild submitted by David Mitchell
  <david.mitchell@telogis.com>. This closes #55751.
