@@ -1,5 +1,6 @@
 DIST plruby-0.4.2.tar.gz 116418 RMD160 5d2b0688574376c1577e2752dde9b02e7cc6eed4 SHA1 cb73ac2730915f813e809adee01a19dae405cdd2 SHA256 63711d6461ac7d30666d9b9c252677fe9bbcacb8c5ebaa5c62294b9250618f05
 DIST plruby-0.4.9.tar.gz 129207 RMD160 8f9b522a9219fbfcb32b79b05243ac73f611a471 SHA1 d72c659515ed0c475b0cb74213bb688666f1101d SHA256 a3c90cc131be7c0e446cd7b6647833041e07386b1d23250c0b452eabd60ca628
+DIST plruby-0.5.1.tar.gz 129624 RMD160 cadbc8ca7d92cf0a6ffa7998e57fa21fd77e10a7 SHA1 d8ad3c9dce62f653115e86dbf62d8ddf060e3cb3 SHA256 6a5a0e20c400346b11ad84542305fd6002540145e78f14015138fa80f19ae2ab
 EBUILD plruby-0.4.2.ebuild 573 RMD160 4e720c177662e8ead7ff5a693803778ea62bb495 SHA1 6ea98b80a4be594a6a9a8f2ee797e2a22903b287 SHA256 60f79139d8c2a006442a17c32bc1c025a6376f2e24e707bfc3ba2d1cd98b14fe
 MD5 ea0876432d4be91652ed231e577702ff plruby-0.4.2.ebuild 573
 RMD160 4e720c177662e8ead7ff5a693803778ea62bb495 plruby-0.4.2.ebuild 573
@@ -8,10 +9,14 @@ EBUILD plruby-0.4.9.ebuild 577 RMD160 7401df66ab1afe8af5d8313342d5488e091e0fd5 S
 MD5 b89abb84db982a74a5af3368a01bb9a0 plruby-0.4.9.ebuild 577
 RMD160 7401df66ab1afe8af5d8313342d5488e091e0fd5 plruby-0.4.9.ebuild 577
 SHA256 186b68057a53ab177cd279ae35937c99d0ef043f6586e1a710296d740f5db3a1 plruby-0.4.9.ebuild 577
-MISC ChangeLog 1135 RMD160 69c936d9b47daf16e095db205aa3b9ebb5bfa505 SHA1 ebb9dd31e5d547c15960ab4d7bee98296b24e253 SHA256 1365de013a12a45d3d1723a3a4dd54c41c16a7368f34080ffaf6f2946801f295
-MD5 584b2bcb01187abcec64565aa4fee416 ChangeLog 1135
-RMD160 69c936d9b47daf16e095db205aa3b9ebb5bfa505 ChangeLog 1135
-SHA256 1365de013a12a45d3d1723a3a4dd54c41c16a7368f34080ffaf6f2946801f295 ChangeLog 1135
+EBUILD plruby-0.5.1.ebuild 573 RMD160 d86e4174068026dcaed66e478deadbcf473b4442 SHA1 a9eb7e1d5e50267e90cea319ea5ce49103dbcf3b SHA256 adff4fda4851f855527bc72c0e4e5e49680d667b191e5563c9a45c14de518cbd
+MD5 5c8173e9889b61faab0d2f2f7cba5da1 plruby-0.5.1.ebuild 573
+RMD160 d86e4174068026dcaed66e478deadbcf473b4442 plruby-0.5.1.ebuild 573
+SHA256 adff4fda4851f855527bc72c0e4e5e49680d667b191e5563c9a45c14de518cbd plruby-0.5.1.ebuild 573
+MISC ChangeLog 1249 RMD160 78788150091f6a44c344deeeda7c9568b9659d6d SHA1 c51fd95ced5a8e533e0cd49eb74d8aaa4259b305 SHA256 1077dd73b27187c21b9ed8753913c14f2306ed4cefc4e590a33352743077a270
+MD5 4ca21361c88cfb9241a989d5ba173010 ChangeLog 1249
+RMD160 78788150091f6a44c344deeeda7c9568b9659d6d ChangeLog 1249
+SHA256 1077dd73b27187c21b9ed8753913c14f2306ed4cefc4e590a33352743077a270 ChangeLog 1249
 MISC metadata.xml 163 RMD160 70bbda1c1e8316a09d467334131898ae833a3205 SHA1 f43b9a4a2a82140936f9b04e4e63b3c9a495141f SHA256 f0699a4c3ad24cc38836c2d4a1ba03e4e403a9a5364b51df405db02014005891
 MD5 f8d3d207746da2a3cd14dcaab8daab76 metadata.xml 163
 RMD160 70bbda1c1e8316a09d467334131898ae833a3205 metadata.xml 163
@@ -22,3 +27,6 @@ SHA256 a639e3f5b099328766afb58d538ac04a0df5140770bb29a8e3cf11035e357504 files/di
 MD5 39ec6b3019c060b85529aec2568be665 files/digest-plruby-0.4.9 238
 RMD160 1c49f4b89e01f223c7f83fb036f43bf52d8ef470 files/digest-plruby-0.4.9 238
 SHA256 8888ae6a30c0ca4f9fdaf2710d945addf14f6ab546eb76a622f48c2c30180546 files/digest-plruby-0.4.9 238
+MD5 32b6a0086e9280895212fa4165b4b4bb files/digest-plruby-0.5.1 238
+RMD160 75da742f2d74de0c84b677b04b92e247263834cb files/digest-plruby-0.5.1 238
+SHA256 3fe3376df985da6b960d5a05f7382b3f36cfdab37d4fe064116e2675de487ecb files/digest-plruby-0.5.1 238
