@@ -1,0 +1,3 @@
+MD5 ffe71918648707cdde277939936c8172 plruby-0.5.1.tar.gz 129624
+RMD160 cadbc8ca7d92cf0a6ffa7998e57fa21fd77e10a7 plruby-0.5.1.tar.gz 129624
+SHA256 6a5a0e20c400346b11ad84542305fd6002540145e78f14015138fa80f19ae2ab plruby-0.5.1.tar.gz 129624
