@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/plruby
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/plruby/ChangeLog,v 1.7 2007/02/22 01:06:38 peper Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/plruby/ChangeLog,v 1.8 2008/01/18 00:29:03 caleb Exp $
+
+*plruby-0.5.1 (18 Jan 2008)
+
+  18 Jan 2008; Caleb Tennis <caleb@gentoo.org> +plruby-0.5.1.ebuild:
+  version bump
 
   22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
